--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "file-saver": "^2.0.2",
+    "final-form": "^4.18.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-final-form": "^6.3.5",
+    "reactjs-popup": "^1.5.0",
     "xlsx": "^0.15.4"
   },
   "devDependencies": {
