--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
     "final-form": "^4.18.7",
     "react": "^16.12.0",
