--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "accounting",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yaroslavFrolov.github.io/accounting",
   "dependencies": {
-    "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
     "final-form": "^4.18.7",
     "react": "^16.12.0",
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "react-scripts": "3.3.0"
   },
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
